# machinist-tool

./: .gitignore  README.md
Backend/: package.json
Backend/machinist-api/: Cargo.toml
Backend/machinist-api/src/: main.rs
Frontend/: README.md  index.html  package-lock.json  package.json
Frontend/src/: App.tsx  app.css  global.css
Frontend/src/components/dropdown/: dropdown.css  dropdown.tsx
Frontend/src/components/footer/: footer.css  footer.tsx
Frontend/src/components/homebutton/: homebutton.css  homebutton.tsx
Frontend/src/components/logo/: Logo.css  logo.tsx
Frontend/src/components/navbar/: navbar.css  navbar.tsx
Frontend/src/features/auth/: login.css  login.tsx
Frontend/src/features/chat/: chatwindow.css  chatwindow.tsx
Frontend/src/features/communitychat/: communitychat.css  communitychat.tsx
Frontend/src/features/level/: communitychat.css  communitychat.tsx  levelselect.css  levelselect.tsx
Frontend/src/pages/home/: home.tsx
Frontend/src/pages/play/: play.css  play.tsx
